--- a/karl/views/static/ux2/css/main.css
+++ b/karl/views/static/ux2/css/main.css
@@ -122,14 +122,11 @@ pre{padding:1.333 1.333;}
 .feeditem .feedoperation .tagged span{background-position:left -41px;}
 .feeditem .feedoperation .edited span{background-position:left -20px;}
 .feeditem .feedtext{width:95%;}
-.feedOptions{float:right;border:1px solid #cecece;background-color:#e6e6f2;padding:8px;margin:0 0 10px 10px;}
-#feed-filters{float:left;}#feed-filters ul{margin:3px 0 0 0;padding:0;list-style:none;font-weight:bold;text-align:right;}#feed-filters ul li{display:inline-block;float:left;height:19px;position:relative;padding:0;margin:0;list-style:none;text-align:center;color:#ffffff;border-right:1px solid #bcc2c7;}
-#feed-filters ul a{text-decoration:none;height:16px;margin:0px;padding:1px 10px;outline:0;font-size:11px;background-color:#f6f7f6;border-top:1px solid #bcc2c7;border-bottom:1px solid #bcc2c7;color:#3A74A9;font-weight:normal;line-height:18px;padding-bottom:2px;}#feed-filters ul a:hover{background-color:#FBFCFB;color:#3A74A9;}
-#feed-filters ul a:active{background-color:#ebeced;color:#3A74A9;}
-#feed-filters ul .firstItem a{border-left:1px solid #bcc2c7;border-radius:5px 0 0 5px;-moz-border-radius:5px 0 0 5px;}
-#feed-filters ul .lastItem{border-right:none;}#feed-filters ul .lastItem a{border-right:1px solid #bcc2c7;border-radius:0 5px 5px 0;-moz-border-radius:0 5px 5px 0;}
-#feed-filters ul .current a,#feed-filters ul .current a:hover{background-color:#ebeced;color:#000000;cursor:default;font-weight:bold;}
-#poll-indicator{cursor:pointer;padding:1px 10px;margin:3px 0 0 0;height:16px;line-height:16px;float:left;border-radius:5px;-moz-border-radius:5px;font-family:Arial,Verdana,sans-serif;font-size:11px;text-decoration:none;text-align:center;text-transform:capitalize;outline:none;}#poll-indicator.on,#poll-indicator.on:visited,#poll-indicator.polling,#poll-indicator.polling:visited{background:#639332;border:1px solid #355217;font-weight:bold;color:#fff;}
+.feedOptions{-webkit-border-radius:0.5em;-moz-border-radius:0.5em;border-radius:0.5em;-webkit-background-clip:padding-box;-moz-background-clip:padding-box;background-clip:padding-box;color:#000000;font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;float:right;padding:10px;margin:0 0 10px 10px;zoom:1;*zoom:1;margin:0 0.6665em 1.333em;padding:0.6665em;background:#c8b6a1;text-shadow:none;position:relative;-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;}.feedOptions a{color:#000000;}.feedOptions a:hover{text-decoration:underline;}
+.feedOptions:before,.feedOptions:after{display:table;content:"";zoom:1;}
+.feedOptions:after{clear:both;}
+#feed-filters{float:left;}#feed-filters a{color:#000000;font-size:0.75em;text-decoration:none;outline:0;}
+#poll-indicator{cursor:pointer;padding:2px 10px 8px 10px;margin:3px 0 0 0;height:16px;line-height:16px;float:left;-webkit-border-radius:0.5em;-moz-border-radius:0.5em;border-radius:0.5em;-webkit-background-clip:padding-box;-moz-background-clip:padding-box;background-clip:padding-box;font-family:Arial,Verdana,sans-serif;font-size:11px;text-decoration:none;text-align:center;text-transform:capitalize;outline:none;}#poll-indicator.on,#poll-indicator.on:visited,#poll-indicator.polling,#poll-indicator.polling:visited{background:#639332;border:1px solid #355217;font-weight:bold;color:#fff;}
 #poll-indicator.off,#poll-indicator.error{background:#ebeced;border:1px solid #b4b4b4;color:#333333;font-weight:normal;}
 #feed-polling{float:right;margin-left:15px;}#feed-polling #polling-info{cursor:pointer;}
 #feed-polling a img{border:none;display:none;}
@@ -445,21 +442,32 @@ button.btn.btn-mini,input[type="submit"].btn.btn-mini{*padding-top:1px;*padding-
 .btn-group:first-child{*margin-left:0;}
 .btn-group+.btn-group{margin-left:5px;}
 .btn-toolbar{margin-top:0.6665em;margin-bottom:0.6665em;}.btn-toolbar .btn-group{display:inline-block;*display:inline;*zoom:1;}
-.btn-group .btn{position:relative;float:left;margin-left:-1px;-webkit-border-radius:0;-moz-border-radius:0;border-radius:0;-webkit-background-clip:padding-box;-moz-background-clip:padding-box;background-clip:padding-box;}
-.btn-group .btn:first-child{margin-left:0;-webkit-border-top-left-radius:4px;-moz-border-radius-topleft:4px;border-top-left-radius:4px;-webkit-border-bottom-left-radius:4px;-moz-border-radius-bottomleft:4px;border-bottom-left-radius:4px;}
-.btn-group .btn:last-child,.btn-group .dropdown-toggle{-webkit-border-top-right-radius:4px;-moz-border-radius-topright:4px;border-top-right-radius:4px;-webkit-border-bottom-right-radius:4px;-moz-border-radius-bottomright:4px;border-bottom-right-radius:4px;}
-.btn-group .btn.large:first-child{margin-left:0;-webkit-border-top-left-radius:6px;-moz-border-radius-topleft:6px;border-top-left-radius:6px;-webkit-border-bottom-left-radius:6px;-moz-border-radius-bottomleft:6px;border-bottom-left-radius:6px;}
-.btn-group .btn.large:last-child,.btn-group .large.dropdown-toggle{-webkit-border-top-right-radius:6px;-moz-border-radius-topright:6px;border-top-right-radius:6px;-webkit-border-bottom-right-radius:6px;-moz-border-radius-bottomright:6px;border-bottom-right-radius:6px;}
-.btn-group .btn:hover,.btn-group .btn:focus,.btn-group .btn:active,.btn-group .btn.active{z-index:2;}
+.btn-group>.btn{position:relative;float:left;margin-left:-1px;-webkit-border-radius:0;-moz-border-radius:0;border-radius:0;-webkit-background-clip:padding-box;-moz-background-clip:padding-box;background-clip:padding-box;}
+.btn-group>.btn:first-child{margin-left:0;-webkit-border-top-left-radius:4px;-moz-border-radius-topleft:4px;border-top-left-radius:4px;-webkit-border-bottom-left-radius:4px;-moz-border-radius-bottomleft:4px;border-bottom-left-radius:4px;}
+.btn-group>.btn:last-child,.btn-group>.dropdown-toggle{-webkit-border-top-right-radius:4px;-moz-border-radius-topright:4px;border-top-right-radius:4px;-webkit-border-bottom-right-radius:4px;-moz-border-radius-bottomright:4px;border-bottom-right-radius:4px;}
+.btn-group>.btn.large:first-child{margin-left:0;-webkit-border-top-left-radius:6px;-moz-border-radius-topleft:6px;border-top-left-radius:6px;-webkit-border-bottom-left-radius:6px;-moz-border-radius-bottomleft:6px;border-bottom-left-radius:6px;}
+.btn-group>.btn.large:last-child,.btn-group>.large.dropdown-toggle{-webkit-border-top-right-radius:6px;-moz-border-radius-topright:6px;border-top-right-radius:6px;-webkit-border-bottom-right-radius:6px;-moz-border-radius-bottomright:6px;border-bottom-right-radius:6px;}
+.btn-group>.btn:hover,.btn-group>.btn:focus,.btn-group>.btn:active,.btn-group>.btn.active{z-index:2;}
 .btn-group .dropdown-toggle:active,.btn-group.open .dropdown-toggle{outline:0;}
-.btn-group .dropdown-toggle{padding-left:8px;padding-right:8px;-webkit-box-shadow:inset 1px 0 0 rgba(255, 255, 255, 0.125),inset 0 1px 0 rgba(255, 255, 255, 0.2),0 1px 2px rgba(0, 0, 0, 0.05);-moz-box-shadow:inset 1px 0 0 rgba(255, 255, 255, 0.125),inset 0 1px 0 rgba(255, 255, 255, 0.2),0 1px 2px rgba(0, 0, 0, 0.05);box-shadow:inset 1px 0 0 rgba(255, 255, 255, 0.125),inset 0 1px 0 rgba(255, 255, 255, 0.2),0 1px 2px rgba(0, 0, 0, 0.05);*padding-top:5px;*padding-bottom:5px;}
-.btn-group.open{*z-index:1000;}.btn-group.open .dropdown-menu{display:block;margin-top:1px;-webkit-border-radius:5px;-moz-border-radius:5px;border-radius:5px;-webkit-background-clip:padding-box;-moz-background-clip:padding-box;background-clip:padding-box;}
-.btn-group.open .dropdown-toggle{background-image:none;-webkit-box-shadow:inset 0 1px 6px rgba(0, 0, 0, 0.15),0 1px 2px rgba(0, 0, 0, 0.05);-moz-box-shadow:inset 0 1px 6px rgba(0, 0, 0, 0.15),0 1px 2px rgba(0, 0, 0, 0.05);box-shadow:inset 0 1px 6px rgba(0, 0, 0, 0.15),0 1px 2px rgba(0, 0, 0, 0.05);}
+.btn-group>.dropdown-toggle{padding-left:8px;padding-right:8px;-webkit-box-shadow:inset 1px 0 0 rgba(255,255,255,.125), inset 0 1px 0 rgba(255,255,255,.2), 0 1px 2px rgba(0,0,0,.05);-moz-box-shadow:inset 1px 0 0 rgba(255,255,255,.125), inset 0 1px 0 rgba(255,255,255,.2), 0 1px 2px rgba(0,0,0,.05);box-shadow:inset 1px 0 0 rgba(255,255,255,.125), inset 0 1px 0 rgba(255,255,255,.2), 0 1px 2px rgba(0,0,0,.05);*padding-top:4px;*padding-bottom:4px;}
+.btn-group>.btn-mini.dropdown-toggle{padding-left:5px;padding-right:5px;}
+.btn-group>.btn-small.dropdown-toggle{*padding-top:4px;*padding-bottom:4px;}
+.btn-group>.btn-large.dropdown-toggle{padding-left:12px;padding-right:12px;}
+.btn-group.open .dropdown-toggle{background-image:none;-webkit-box-shadow:inset 0 2px 4px rgba(0,0,0,.15), 0 1px 2px rgba(0,0,0,.05);-moz-box-shadow:inset 0 2px 4px rgba(0,0,0,.15), 0 1px 2px rgba(0,0,0,.05);box-shadow:inset 0 2px 4px rgba(0,0,0,.15), 0 1px 2px rgba(0,0,0,.05);}
+.btn-group.open .btn.dropdown-toggle{background-color:#dbc7a8;}
+.btn-group.open .btn-primary.dropdown-toggle{background-color:#3d72b3;}
+.btn-group.open .btn-warning.dropdown-toggle{background-color:#f89406;}
+.btn-group.open .btn-danger.dropdown-toggle{background-color:#bd362f;}
+.btn-group.open .btn-success.dropdown-toggle{background-color:#51a351;}
+.btn-group.open .btn-info.dropdown-toggle{background-color:#2f96b4;}
+.btn-group.open .btn-inverse.dropdown-toggle{background-color:#222222;}
 .btn .caret{margin-top:7px;margin-left:0;}
 .btn:hover .caret,.open.btn-group .caret{filter:alpha(opacity=100);-khtml-opacity:1;-moz-opacity:1;opacity:1;}
-.btn-primary .caret,.btn-danger .caret,.btn-info .caret,.btn-success .caret{border-top-color:#eadecc;filter:alpha(opacity=75);-khtml-opacity:0.75;-moz-opacity:0.75;opacity:0.75;}
-.btn-small .caret{margin-top:4px;}
-.btn-group.open .dropdown-menu{-webkit-border-radius:0 0 0.3em 0.3em;-moz-border-radius:0 0 0.3em 0.3em;border-radius:0 0 0.3em 0.3em;-webkit-background-clip:padding-box;-moz-background-clip:padding-box;background-clip:padding-box;margin-top:0;}
+.btn-mini .caret{margin-top:5px;}
+.btn-small .caret{margin-top:6px;}
+.btn-large .caret{margin-top:6px;border-left-width:5px;border-right-width:5px;border-top-width:5px;}
+.dropup .btn-large .caret{border-bottom:5px solid #000000;border-top:0;}
+.btn-primary .caret,.btn-warning .caret,.btn-danger .caret,.btn-info .caret,.btn-success .caret,.btn-inverse .caret{border-top-color:#eadecc;border-bottom-color:#eadecc;filter:alpha(opacity=75);-khtml-opacity:0.75;-moz-opacity:0.75;opacity:0.75;}
 .nav{margin-left:0;margin-bottom:1.333em;list-style:none;}
 .nav>li>a{display:block;}
 .nav>li>a:hover{text-decoration:none;background-color:#eeeeee;}
