--- a/karl/views/static/ux2/css/elements/calendar.less
+++ b/karl/views/static/ux2/css/elements/calendar.less
@@ -1,10 +1,4 @@
 
-
-
-
-
-
-
 /* imported for medias screen and print. */
 
 .calendar () {
@@ -1004,6 +998,85 @@
     // }
 
 
+    .calendar_grid(@width:900px) {
+
+        @scroll_width: 22;
+        @cal_body_th_width: 44;
+
+        /** =CALENDAR WIDE GRID
+        ----------------------------------------------- */
+        @cal_month_td_width: floor((@width / 7) - 2);        
+        @table_width: (@cal_month_td_width + 2) * 7;
+        table.cal-body {
+          width: @table_width;
+        }
+
+        @cal_week_td_width: floor(((@table_width - @scroll_width) - @cal_body_th_width) / 7) - 1;
+        @cal_scroll_width: ((@cal_week_td_width + 1) * 7) + @cal_body_th_width;
+        table.cal_scroll {
+          width: @cal_scroll_width
+        }
+        /* hours of the day */
+        .cal_hours_scroll {
+          width: @table_width;
+        }
+        /* current time */
+        .cal_time {
+          width: (@table_width - @scroll_width) - 40; /* cal_scrol width - 40px */
+        }
+
+        /** =CALENDAR WIDE MONTH VIEW
+        ----------------------------------------------- */
+        /* monthly */
+
+        .cal_month td {
+          width: @cal_month_td_width
+        }
+        .cal_month .cal_event a {
+          width: @cal_month_td_width - 3;
+        }
+        .cal_month .cal_event_pos_full a {
+          /*width: 87px;*/
+          width: 120px; /* XXX needs to be handled? */
+        }
+        .cal_month .cal_event_pos_left a,
+        .cal_month .cal_event_pos_right a {
+          width: @cal_month_td_width - 4;
+        }
+
+         /** =CALENDAR WIDE WEEK VIEW
+        ----------------------------------------------- */
+        /* +231 / 7 = 33 */
+
+        .cal_week td {
+          width: @cal_week_td_width;
+
+        }
+        .cal_week .cal_event a {
+          width: @cal_week_td_width - 1;
+        }
+        .cal_week .cal_event_block {
+          width: @cal_week_td_width - 6; /* 6px padding*/
+
+        }
+
+        /** =CALENDAR WIDE DAY VIEW
+        ----------------------------------------------- */
+        .cal_hours_scroll table.cal_day {
+            width: @table_width - 21;     
+        }
+
+        .cal_day .cal_event a {
+          width: 829px;
+        }
+        .cal_day .cal_event_block {
+          width: @table_width - 21 - @cal_body_th_width - 8  /* th, border, padding+border, -left*/
+        }
+
+
+
+    }
+
 
     /** =CALENDAR WIDE STYLES
     ----------------------------------------------- */
@@ -1012,164 +1085,7 @@
      * Now, we just do it based on media. */
 
     @media only screen and (min-width: 1024px) {
-
-        /** =CALENDAR WIDE GRID
-        ----------------------------------------------- */
-        table.cal-body {
-          /*width: 667px;*/ /*main diff: 231 */
-          width: 900px - 1;
-        }
-        table.cal_scroll {
-          /*width: 646px;*/
-          width: 877px;
-        }
-        /*
-        .cal_scroll th {
-          width: 43px;
-        }
-        */
-        /* all day */
-        /*
-        .cal-body .all_day th {
-          width: 43px;
-        }
-        */
-        /*
-        .cal-body .all_day .create {
-          width: 15px;
-        }
-        */
-        /* hours of the day */
-        .cal_hours_scroll {
-          /*width: 665px;*/
-          // ... width: 896px;
-          width: 900px;
-        }
-        /* current time */
-        .cal_time {
-          /*width: 613px;*/
-          width: 844px;
-        }
-        /* events */
-        /*
-        .cal_event_pos_right a {
-          width: 92px;
-        }
-        */
-        /* add new event */
-        /*
-        .cal_hour_event .create {
-          width: 15px;
-        }
-        */
-
-        /** =CALENDAR WIDE MONTH VIEW
-        ----------------------------------------------- */
-        /* monthly */
-        /* diff: +33 */
-        .cal_month td {
-          /*width: 93px;*/
-          width: 126px;
-        }
-        .cal_month .cal_event a {
-          /*width: 90px;*/
-          width: 123px;
-        }
-        .cal_month .cal_event_pos_full a {
-          /*width: 87px;*/
-          width: 120px;
-        }
-        .cal_month .cal_event_pos_left a {
-          /*width: 89px;*/
-          width: 122px;
-        }
-        .cal_month .cal_event_pos_right a {
-          /*width: 89px;*/
-          width: 122px;
-        }
-
-        /** =CALENDAR WIDE WEEK VIEW
-        ----------------------------------------------- */
-        /* +231 / 7 = 33 */
-        .cal_week td {
-          /*width: 85px;*/
-          width: 118px;
-        }
-        .cal_week .cal_event a {
-          /*width: 84px;*/
-          width: 117px;
-        }
-        .cal_week .cal_event_block {
-          /*width: 79px;*/
-          width: 112px;
-        }
-        .cal_week .last {
-          width: 21px;
-        }
-
-        /** =CALENDAR WIDE DAY VIEW
-        ----------------------------------------------- */
-        .cal_day .last {
-          width: 21px;
-        }
-        .cal_day .cal_event a {
-          /*width: 598px;*/
-          width: 829px;
-        }
-        .cal_day .cal_event_block {
-         /*width: 594px;*/
-          width: 825px;
-        }
-
-
-        /** =CALENDAR WIDE AGENDA VIEW
-        ----------------------------------------------- */
-        /*
-        .cal_agenda .cal_agenda_day th {
-          width: 80px;
-        }
-        .cal_agenda_time {
-          width: 115px;
-        }
-        */
-
-        /** =CALENDAR WIDE SETUP
-        ----------------------------------------------- */
-        /*
-        #calendar_setup dd {
-            width: 425px;
-        }
-        p.cal_hint {
-          width: 550px;
-        }
-        table.cal_all .color {
-          width: 20px;
-        }
-        table.cal_all .name {
-          width: 150px;
-        }
-        table.cal_all .location {
-          width: 90px;
-        }
-        #calendar_path {
-          width: 150px;
-        }
-        input.category_title, input.layer_title {
-          width: 330px;
-        }
-        select.category_paths {
-          width: 500px;
-        }
-        */
-
-        /** =CALENDAR WIDE TOOLTIP
-        ----------------------------------------------- */
-        /*
-        .tooltip {
-          width: 150px;
-        }
-        */
-
+        .calendar_grid(900px);
     }
 
 
